服务端连接信息由URL修改为使用URI，能够有自定义的protocol，不必使用标准的http, ftp等协议